--- a/pom.xml
+++ b/pom.xml
@@ -7,10 +7,10 @@
 	<version>0.0.1-SNAPSHOT</version>
 
 	<properties>
-		<maven.compiler.target>11</maven.compiler.target>
-		<maven.compiler.source>11</maven.compiler.source>
+		<maven.compiler.target>22</maven.compiler.target>
+		<maven.compiler.source>22</maven.compiler.source>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<exec.mainClass>dad.gesaula.ui.Main</exec.mainClass>
+		<exec.mainClass>dad.gesaula.app.Main</exec.mainClass>
 	</properties>
 
 	<dependencies>
